v1/docs/ModelsCSRGenerationResponseModel.md
# ModelsCSRGenerationResponseModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**CSRFilePath** | Pointer to **string** |  | [optional] 
**CSRText** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsCSRGenerationResponseModel

`func NewModelsCSRGenerationResponseModel() *ModelsCSRGenerationResponseModel`

NewModelsCSRGenerationResponseModel instantiates a new ModelsCSRGenerationResponseModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCSRGenerationResponseModelWithDefaults

`func NewModelsCSRGenerationResponseModelWithDefaults() *ModelsCSRGenerationResponseModel`

NewModelsCSRGenerationResponseModelWithDefaults instantiates a new ModelsCSRGenerationResponseModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetCSRFilePath

`func (o *ModelsCSRGenerationResponseModel) GetCSRFilePath() string`

GetCSRFilePath returns the CSRFilePath field if non-nil, zero value otherwise.

### GetCSRFilePathOk

`func (o *ModelsCSRGenerationResponseModel) GetCSRFilePathOk() (*string, bool)`

GetCSRFilePathOk returns a tuple with the CSRFilePath field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCSRFilePath

`func (o *ModelsCSRGenerationResponseModel) SetCSRFilePath(v string)`

SetCSRFilePath sets CSRFilePath field to given value.

### HasCSRFilePath

`func (o *ModelsCSRGenerationResponseModel) HasCSRFilePath() bool`

HasCSRFilePath returns a boolean if a field has been set.

### GetCSRText

`func (o *ModelsCSRGenerationResponseModel) GetCSRText() string`

GetCSRText returns the CSRText field if non-nil, zero value otherwise.

### GetCSRTextOk

`func (o *ModelsCSRGenerationResponseModel) GetCSRTextOk() (*string, bool)`

GetCSRTextOk returns a tuple with the CSRText field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCSRText

`func (o *ModelsCSRGenerationResponseModel) SetCSRText(v string)`

SetCSRText sets CSRText field to given value.

### HasCSRText

`func (o *ModelsCSRGenerationResponseModel) HasCSRText() bool`

HasCSRText returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


