v11/docs/ModelsCSRGenerationResponseModel.md
# ModelsCSRGenerationResponseModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**CsrFilePath** | Pointer to **NullableString** |  | [optional] 
**CsrText** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsCSRGenerationResponseModel

`func NewModelsCSRGenerationResponseModel() *ModelsCSRGenerationResponseModel`

NewModelsCSRGenerationResponseModel instantiates a new ModelsCSRGenerationResponseModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCSRGenerationResponseModelWithDefaults

`func NewModelsCSRGenerationResponseModelWithDefaults() *ModelsCSRGenerationResponseModel`

NewModelsCSRGenerationResponseModelWithDefaults instantiates a new ModelsCSRGenerationResponseModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetCsrFilePath

`func (o *ModelsCSRGenerationResponseModel) GetCsrFilePath() string`

GetCsrFilePath returns the CsrFilePath field if non-nil, zero value otherwise.

### GetCsrFilePathOk

`func (o *ModelsCSRGenerationResponseModel) GetCsrFilePathOk() (*string, bool)`

GetCsrFilePathOk returns a tuple with the CsrFilePath field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCsrFilePath

`func (o *ModelsCSRGenerationResponseModel) SetCsrFilePath(v string)`

SetCsrFilePath sets CsrFilePath field to given value.

### HasCsrFilePath

`func (o *ModelsCSRGenerationResponseModel) HasCsrFilePath() bool`

HasCsrFilePath returns a boolean if a field has been set.

### SetCsrFilePathNil

`func (o *ModelsCSRGenerationResponseModel) SetCsrFilePathNil(b bool)`

 SetCsrFilePathNil sets the value for CsrFilePath to be an explicit nil

### UnsetCsrFilePath
`func (o *ModelsCSRGenerationResponseModel) UnsetCsrFilePath()`

UnsetCsrFilePath ensures that no value is present for CsrFilePath, not even an explicit nil
### GetCsrText

`func (o *ModelsCSRGenerationResponseModel) GetCsrText() string`

GetCsrText returns the CsrText field if non-nil, zero value otherwise.

### GetCsrTextOk

`func (o *ModelsCSRGenerationResponseModel) GetCsrTextOk() (*string, bool)`

GetCsrTextOk returns a tuple with the CsrText field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCsrText

`func (o *ModelsCSRGenerationResponseModel) SetCsrText(v string)`

SetCsrText sets CsrText field to given value.

### HasCsrText

`func (o *ModelsCSRGenerationResponseModel) HasCsrText() bool`

HasCsrText returns a boolean if a field has been set.

### SetCsrTextNil

`func (o *ModelsCSRGenerationResponseModel) SetCsrTextNil(b bool)`

 SetCsrTextNil sets the value for CsrText to be an explicit nil

### UnsetCsrText
`func (o *ModelsCSRGenerationResponseModel) UnsetCsrText()`

UnsetCsrText ensures that no value is present for CsrText, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


